Java 21 Upgrade